# DeepLearning42028UTS

./: .gitignore  .sagemakerignore  README.md  requirements.txt
.dvc/: config
.github/workflows/: auto-project-move.yml  build-check.yml  docker-publish.yml  infra-compose-check.yml  pr-check.yml  pr-checklist.yml  python-lint.yml  train-pipeline.yml
Assignment-3/: README.md
Assignment-3/Part-A/: Assignment-3-PartA-Draft.md  README.md
Assignment-3/Part-B/: README.md
Assignment-3/Part-C/: README.md
Assignment-3/Part-D/: README.md
Assignment-3/Part-E/: README.md
Assignment-3/Part-G/: README.md
PROJECTS/: PRD.md  TechSpec.md
PROJECTS/CrowdNav/: .env.example  .gitignore  README.md  requirements.txt  run_auto_labeling.py
application/: docker-compose.yml
application/backend/: README.md
application/frontend/: .env.example  (+12 more)
data/: README.md
docs/: ADR_TRACKER_ISSUE.md  API_SPEC.md  BACKEND_ERD.md  DATA.md  DESIGN.md  DESIGN_RULES.md  DETECTION_3CLASS_PLAN.md  PRD.md  RELEASE_v2.0.0.md  RELEASE_v2.5.0.md  RELEASE_v2.5.1.md  RELEASE_v2.6.0.md  REQUIREMENTS.md  TechSpec.md
infra/: README.md  setup.sh  train_keras_skeleton.py  train_skeleton.py  versions.lock.toml
notebooks/: README.md
src/: README.md  clearml_smoketest.py
train/: README.md  pyproject.toml  requirements-pkg.txt  requirements.txt  run_auto_labeling.py
train/configs/: augment_pedestrian.yaml
train/notebooks/: 01_sagemaker_clearml_launcher.ipynb
train/scripts/: automate_preprocessing.py  eval_yolo.py  rebuild_splits_gt.py  replace_labels_with_gt.py  self_train_loop.py  train_yolo.py
train/src/: repo_paths.py
train/src/analysis/: eda_report.py  track_analyzer.py
train/src/data/: jrdb_to_yolo.py  pseudo_label_yolov8.py  split_by_sequence.py
train/src/data/formats/: __init__.py  coco.py  dataset_config.py
train/src/data/keras/: __init__.py  coco_tfds.py
train/src/data/prepare/: __init__.py  jrdb_to_yolo.py  pseudo_label.py  reporting.py  split.py  yolo_to_coco.py
train/src/data/preprocessing/: auto_labeler.py  auto_labeler_smoke.py  cli.py  io_utils.py  types.py
train/src/inference/: alert_dispatcher.py
train/src/mlops/: cycle_logging.py  train_pipeline.py
train/src/training/: __init__.py  cycle_logging.py  hyperparams.py  mock_generator.py  protocols.py  sagemaker_cli.py  subprocess_runner.py  train_pipeline.py  training_device.py
train/src/utils/: clearml_setup.py  projection.py
(+472 files in other folders)
