[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowdnav-train"
version = "2.6.0"
description = "CrowdNav training, preprocessing, and inference packages (UTS 42028 DL A3)"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "types-PyYAML",
    "pandas-stubs",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-pkg.txt"] }

# Approach C (ADR-0010): keep `src/` directory and `from src.X` imports as-is.
# `pip install -e ./train` exposes the `src` package and its sub-packages.
# This eliminates the sys.path.insert hacks in train/run_auto_labeling.py,
# train/scripts/{train_yolo, self_train_loop, automate_preprocessing}.py, and
# the launcher notebook, while keeping git diff minimal.
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["ultralytics", "ultralytics.*", "clearml.*"]
ignore_missing_imports = true
disable_error_code = ["import-untyped", "attr-defined"]

[[tool.mypy.overrides]]
module = [
    "src.training.train_pipeline",
    "src.data.preprocessing.auto_labeler",
    "src.data.pseudo_label_yolov8",
]
disable_error_code = ["attr-defined"]
